feat: update account list

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
 
 <body>
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-  <df-messenger intent="WELCOME" chat-title="Ngân hàng nhà trọ" agent-id="25ac272b-4f92-4297-be69-1b875b68c5a9"
-    language-code="vi"></df-messenger>
+  <df-messenger id="dfMessenger" intent="WELCOME" chat-title="Ngân hàng nhà trọ"
+    agent-id="25ac272b-4f92-4297-be69-1b875b68c5a9" language-code="vi"></df-messenger>
   <app-root></app-root>
 </body>
 
