--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <title>Ngân Hàng Nhà Trọ</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="https://nganhangnhatro.vercel.app/assets/img/logoWeb.png" />
+  <meta property="og:title" content="Ngân hàng nhà trọ" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
